# video_maker_ros

./: CMakeLists.txt  package.xml
config/: configuration.yaml
include/video_maker/: AVIFileSink.h  AVI_file_sink.h  JPEG_buffer.h  JPEG_video_source.h  cmd_handler.h  utils.h  video_maker.h
launch/: video_maker.launch
src/: AVIFileSink.cpp  AVI_file_sink.cpp  JPEG_buffer.cpp  JPEG_video_source.cpp  cmd_handler.cpp  utils.cpp  video_maker.cpp  video_maker_node.cpp
